--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "migrate": "node scripts/run-migrations.js"
   },
   "dependencies": {
     "@auth/supabase-adapter": "^1.0.0",
@@ -20,12 +21,13 @@
     "@supabase/supabase-js": "^2.39.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "date-fns": "^3.0.0",
+    "date-fns": "^4.1.0",
     "date-fns-tz": "^2.0.0",
+    "dotenv": "^16.4.5",
     "googleapis": "^128.0.0",
     "lucide-react": "^0.344.0",
     "next": "^16.0.0",
-    "next-auth": "5.0.0-beta.25",
+    "next-auth": "^5.0.0-beta.30",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^2.2.0",
